# rust-triangle

./: .gitattributes  Cargo.toml  LICENSE  README.md  build.rs  rustfmt.toml
.zed/: debug.json  tasks.json
assets/: Dinosaur.glb
crates/app/: Cargo.toml  build.rs
crates/app/src/: async_compute.rs  camera.rs  d3d12_utils.rs  main.rs  mesh.rs  terrain.rs
crates/app/src/shaders/: shaders.json  terrain.hlsl
crates/imgui-sys/: Cargo.toml  build.rs
crates/imgui-sys/src/: backends.rs  lib.rs
src/: async_compute.rs  imgui_ffi.rs  main.rs
src/shaders/: triangle.hlsl  triangle.ps.hlsl  triangle.vs.hlsl
tools/dxc/: VERSION
