[package]
name = "imgui-sys"
version = "0.1.0"
edition = "2024"

[build-dependencies]
bindgen = "=0.72.1"
cc = "1.2.56"
anyhow = "1.0.102"

[dependencies.windows]
package = "windows"
git = "https://github.com/microsoft/windows-rs"
tag = "73"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi_Common",
]
